Fixed Spacing issue
Fixed issue where the second row wasn't lining up side to side with the first row

--- a/style.css
+++ b/style.css
@@ -23,6 +23,13 @@ header h1 {
     padding: 15px;
 }
 
+.row2 {
+    background-color: black;
+    color: white;
+    border-radius: 30px;
+    margin-bottom: 123px;
+}
+
 .left-column {
     display: flex;
     justify-content: center;
@@ -32,6 +39,7 @@ header h1 {
 .img-container {
     width: 390px;
     height: 390px;
+    margin-left: 20px;
     background-color: black;
     border: 20px solid black;
     border-radius: 30px;
@@ -55,13 +63,6 @@ img.me {
 
 .right-column h1 {
     margin: 15px;
-}
-
-.row2 {
-    background-color: black;
-    color: white;
-    border-radius: 30px;
-    margin-bottom: 123px;
 }
 
 .col-sm {
